--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <link rel="stylesheet" href="css/style.css">
+    <meta name="description" content="Страница про Дом Наркомфина">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
 
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="{https://tatianagolovenko.github.io/CPD-M1-L2/}">
+    <meta property="og:title" content="Wikimedium - Дом Наркомфина">
+    <meta property="og:description" content="Страница про Дом Наркомфина">
+    <!-- <meta property="og:image" content="{image_url}">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:site" content="@SiteTwitter">
+    <meta name="twitter:creator" content="@sapegin"> -->
+
+    <title>Дом Наркомфина</title>
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+    <link rel="icon" type="image/png" href="img/favicon.png" />
+    <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=PT+Sans+Caption:wght@400;700&family=PT+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
